<resources>
    <string name="app_name">GADS 2020 Leaderboard</string>
    <string name="skip_in_second">Skip in %d</string>
    <string name="GADS_logo">GADS logo</string>
    <string name="top_learner_logo">Top learner logo</string>
    <string name="top_skill_iq_logo">Top skill IQ logo</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="submit_form">Submit Form</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="iq_leaders">Skill IQ Leaders</string>
    <string name="project_submitted">Project Submitted</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_github_link">Invalid GitHub Link</string>
    <string name="back_button">Back Button</string>
    <string name="invalid_first_name">Invalid First Name</string>
    <string name="invalid_last_name">Invalid Last Name</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="image_failure">Image failure</string>
    <string name="image_success">Image success</string>
    <string name="confirm_msg">Are you sure</string>
    <string name="string_yes">Yes</string>
    <string name="string_question">\?</string>
    <string name="cancel_button">Cancel button</string>
</resources>